--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
-    "electron-updater": "^6.3.9"
+    "@tailwindcss/vite": "^4.0.9",
+    "electron-updater": "^6.3.9",
+    "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^2.0.0",
